--- a/buildspec.yml
+++ b/buildspec.yml
@@ -3,8 +3,7 @@ version: 0.2
 env:
   secrets-manager:
     LOGIN: SonarCredentials:2354fc317a0a8ac9577783c8d39c7eb3de5b6320
-    HOST: SonarCredentials:https://sonarcloud.io -Dsonar.organization=
-mohanapriya-j01-Dsonar.login=2354fc317a0a8ac9577783c8d39c7eb3de5b6320
+    HOST: SonarCredentials:https://sonarcloud.io -Dsonar.organization=mohanapriya-j01-Dsonar.login=2354fc317a0a8ac9577783c8d39c7eb3de5b6320
     Organization: SonarCredentials:mohanapriya-j01
     Project: SonarCredentials:mohanapriya-j01
 
