--- a/buildspec.yml
+++ b/buildspec.yml
@@ -2,10 +2,10 @@ version: 0.2
 
 env:
   secrets-manager:
-    LOGIN: SonarCredentials:2354fc317a0a8ac9577783c8d39c7eb3de5b6320
-    HOST: SonarCredentials:https://sonarcloud.io -Dsonar.organization=mohanapriya-j01-Dsonar.login=2354fc317a0a8ac9577783c8d39c7eb3de5b6320
-    Organization: SonarCredentials:mohanapriya-j01
-    Project: SonarCredentials:mohanapriya-j01
+    LOGIN: 2354fc317a0a8ac9577783c8d39c7eb3de5b6320
+    HOST: https://sonarcloud.io/
+    Organization: mohanapriya-j01
+    Project: 
 
 phases:
   install:
@@ -16,7 +16,8 @@ phases:
       - echo Logging into Amazon ECR
       - aws --version
       - $(aws ecr get-login --no-include-email --region us-east-2)
-      - REPOSITORY_URI=824342811803.dkr.ecr.us-east-2.amazonaws.com/usermanagement
+      - aws ecr-public get-login-password --region us-east-1 | docker login --username AWS --password-stdin public.ecr.aws/r2l4l4d2
+      - REPOSITORY_URI=public.ecr.aws/r2l4l4d2/ecommerce
       - COMMIT_HASH=$(echo $CODEBUILD_RESOLVED_SOURCE_VERSION | cut -c 1-7)
       - IMAGE_TAG=build-$(echo $CODEBUILD_BUILD_ID | awk -F":" '{print $2}')
       - wget https://binaries.sonarsource.com/Distribution/sonar-scanner-cli/sonar-scanner-cli-3.3.0.1492-linux.zip
